# rust-dpdk

bindings/dpdk-sys/: Cargo.toml  build.rs
bindings/dpdk-sys/src/: lib.rs
l2fwd/: Cargo.toml
pkt_perf/: Cargo.toml
